--- a/dada/extras/documentation/pod_source/COOKBOOK-subscriptions.pod
+++ b/dada/extras/documentation/pod_source/COOKBOOK-subscriptions.pod
@@ -292,7 +292,7 @@ C<--email> should hold the email address you want to subscribe.
 
 C<--verbose> is optional. If set to, C<1>, you will get a small report on the request. 
 
-You can also pass Profile Fields for the subscriber, just use the, C<-fields> paramater: 
+You can also pass Profile Fields for the subscriber, just use the, C<-fields> parameter: 
 
  prompt>perl ./subscribe_email.pl --list mylist --email user@example.com ---fields first_name=John --fields last_name=Doe
 
